added createcom.js and update page

--- a/Company/index.html
+++ b/Company/index.html
@@ -39,4 +39,7 @@
     </div>
 </body>
 <script src="../JavaScript/company.js"></script>
+<script src="../JavaScript/main.js"></script>
+<script src="../JavaScript/Daybook.js"></script>
+<script src="../JavaScript/com.js"></script>
 </html>
