--- a/Company/createcompany.html
+++ b/Company/createcompany.html
@@ -87,5 +87,5 @@
         </div>
     </div>
 </body>
-<script src="../JavaScript/company.js"></script>
+<script src="../JavaScript/Createcomp.js"></script>
 </html>
